# hiqAlpha

./: .gitignore  README.md  notes.md  pyproject.toml  requirements.txt
backend/: .gitignore  agent.py  fastagent.config.yaml  fastagent.secrets.yaml  requirements.txt
